# csv-analyzer

./: .gitignore  README.md  index.html  install.sh  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: anomaly.rs  diff.rs  export.rs  formula.rs  fuzzy.rs  mod.rs  parse.rs  pii.rs  profile.rs  query.rs  schema.rs  stats.rs
src-tauri/src/models/: mod.rs
src/components/: Sidebar.tsx  TitleBar.tsx
src/pages/: AnomalyPage.tsx  ChartsPage.tsx  DataPage.tsx  DiffPage.tsx  DuplicatesPage.tsx  ExportPage.tsx  FilterPage.tsx  FormulaPage.tsx  HomePage.tsx  JoinPage.tsx  PiiPage.tsx  ProfilePage.tsx  QueryPage.tsx  SchemaPage.tsx  StatsPage.tsx
src/types/: index.ts
src/utils/: csvEngine.ts
