[package]
name = "csv-analyzer"
version = "1.0.0"
description = "CSV Analyzer Pro — Advanced CSV analysis desktop app"
authors = ["CSV Analyzer Pro"]
edition = "2021"

[lib]
name = "csv_analyzer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "csv-analyzer"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri              = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs     = "2"
tauri-plugin-shell  = "2"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
csv                = "1.3"
regex              = "1"
rayon              = "1"
chrono             = { version = "0.4", features = ["serde"] }
strsim             = "0.11"
uuid               = { version = "1", features = ["v4"] }
anyhow             = "1"
thiserror          = "1"
tokio              = { version = "1", features = ["full"] }
log                = "0.4"
env_logger         = "0.11"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
